# promo_WB_Ozon

./: .gitignore  README.md  alembic.ini  pyproject.toml
deployment/env/: promo.env.example
deployment/logrotate/: promo
deployment/nginx/: promo.conf
deployment/scripts/: final_acceptance_check.sh  prepare_runtime_dirs.sh  release_readiness_check.sh  runtime_smoke.sh
deployment/systemd/: promo.service
docs/: 01_PROJECT_OVERVIEW_AND_AGENT_DOC_MAP.md  02_SYSTEM_ARCHITECTURE.md  03_MODULES_AND_LAYERS.md  04_DATA_MODEL_AND_DB_SCHEMA.md  05_ACCESS_CONTROL_MODEL.md  06_RUNS_LIFECYCLE_AND_ASYNC_EXECUTION.md  07_FILE_STORAGE_AND_RETENTION.md  08_AUDIT_AND_LOGGING_ARCHITECTURE.md  09_UI_PAGES_AND_ROUTES.md  10_WB_PROCESSING_FLOW.md  11_OZON_PROCESSING_FLOW.md  12_IMPLEMENTATION_STAGES.md  13_DETAILED_TASK_BREAKDOWN.md  14_RISKS_LIMITS_AND_CONTROL_POINTS.md  15_STAGE_DONE_CRITERIA.md  16_REQUIRED_TEST_CONTOURS_AND_SMOKE_CHECKS.md  17_OPEN_ARCHITECTURAL_QUESTIONS.md  18_REMEDIATION_PLAN_AFTER_AUDIT_2026_04_07.md  19_STATUS_HANDOFF_AFTER_R1_R5_2026_04_07.md  20_STATUS_HANDOFF_AFTER_R6_2026_04_07.md  21_FINAL_STATUS_HANDOFF_AFTER_R7_2026_04_07.md  Ozon_promo.xlsx  WB_promo.xlsx  WP_price.xlsx  otchet_07.04.26.txt  tz_VAR_3.txt
migrations/: env.py
migrations/versions/: 0001_reference_tables.py  0002_users_and_user_permissions.py  0003_stores_and_user_store_access.py  0004_runs.py  0005_run_files.py  0006_run_file_links_and_temporary_uploaded_files.py  0007_run_audits.py  0008_system_logs.py  0009_foundation_placeholder.py  __init__.py  _types.py
src/promo/: __init__.py  (+1 more)
(+116 files in other folders)
